# digilog

./: .clang-tidy  CMakeLists.txt  README.md
include/: environment.h  expression.h
include/vector/: declare.h  define.h
src/: environment.c  expression.c  main.c
